Package_Tools/include-C/gst/123_in_arbeit/sdp/gstmikey.pp


unit gstmikey;
interface

{
  Automatically converted by H2Pas 1.0.0 from gstmikey.h
  The following command line parameters were used:
    -p
    -T
    -d
    -c
    -e
    gstmikey.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
  PLongint  = ^Longint;
  PSmallInt = ^SmallInt;
  PByte     = ^Byte;
  PWord     = ^Word;
  PDWord    = ^DWord;
  PDouble   = ^Double;

Type
PGArray  = ^GArray;
PGBytes  = ^GBytes;
Pgchar  = ^gchar;
PGError  = ^GError;
PGstCaps  = ^GstCaps;
PGstMIKEYCacheType  = ^GstMIKEYCacheType;
PGstMIKEYDecryptInfo  = ^GstMIKEYDecryptInfo;
PGstMIKEYEncAlg  = ^GstMIKEYEncAlg;
PGstMIKEYEncryptInfo  = ^GstMIKEYEncryptInfo;
PGstMIKEYKeyDataType  = ^GstMIKEYKeyDataType;
PGstMIKEYKVType  = ^GstMIKEYKVType;
PGstMIKEYMacAlg  = ^GstMIKEYMacAlg;
PGstMIKEYMapSRTP  = ^GstMIKEYMapSRTP;
PGstMIKEYMapType  = ^GstMIKEYMapType;
PGstMIKEYMessage  = ^GstMIKEYMessage;
PGstMIKEYPayload  = ^GstMIKEYPayload;
PGstMIKEYPayloadKEMAC  = ^GstMIKEYPayloadKEMAC;
PGstMIKEYPayloadKeyData  = ^GstMIKEYPayloadKeyData;
PGstMIKEYPayloadPKE  = ^GstMIKEYPayloadPKE;
PGstMIKEYPayloadRAND  = ^GstMIKEYPayloadRAND;
PGstMIKEYPayloadSP  = ^GstMIKEYPayloadSP;
PGstMIKEYPayloadSPParam  = ^GstMIKEYPayloadSPParam;
PGstMIKEYPayloadT  = ^GstMIKEYPayloadT;
PGstMIKEYPayloadType  = ^GstMIKEYPayloadType;
PGstMIKEYPRFFunc  = ^GstMIKEYPRFFunc;
PGstMIKEYSecProto  = ^GstMIKEYSecProto;
PGstMIKEYSecSRTP  = ^GstMIKEYSecSRTP;
PGstMIKEYTSType  = ^GstMIKEYTSType;
PGstMIKEYType  = ^GstMIKEYType;
Pguint8  = ^guint8;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{ GStreamer
 * Copyright (C) <2014> Wim Taymans <wim.taymans@gmail.com>
 *
 * gstmikey.h: various helper functions to manipulate mikey messages
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Library General Public
 * License as published by the Free Software Foundation; either
 * version 2 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Library General Public License for more details.
 *
 * You should have received a copy of the GNU Library General Public
 * License along with this library; if not, write to the
 * Free Software Foundation, Inc., 51 Franklin St, Fifth Floor,
 * Boston, MA 02110-1301, USA.
  }
{$ifndef __GST_MIKEY_H__}
{$define __GST_MIKEY_H__}
{$include <gst/gst.h>}
{$include <gst/sdp/sdp-prelude.h>}

function gst_mikey_message_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function GST_TYPE_MIKEY_MESSAGE : longint; { return type might be wrong }

type
{*
 * GST_MIKEY_VERSION:
 *
 * The supported MIKEY version 1.
  }

const
  GST_MIKEY_VERSION = 1;  
{*
 * GstMIKEYType:
 * @GST_MIKEY_TYPE_INVALID: Invalid type
 * @GST_MIKEY_TYPE_PSK_INIT: Initiator's pre-shared key message
 * @GST_MIKEY_TYPE_PSK_VERIFY: Verification message of a Pre-shared key message
 * @GST_MIKEY_TYPE_PK_INIT: Initiator's public-key transport message
 * @GST_MIKEY_TYPE_PK_VERIFY: Verification message of a public-key message
 * @GST_MIKEY_TYPE_DH_INIT: Initiator's DH exchange message
 * @GST_MIKEY_TYPE_DH_RESP: Responder's DH exchange message
 * @GST_MIKEY_TYPE_ERROR: Error message
 *
 * Different MIKEY data types.
  }
type
  PGstMIKEYType = ^TGstMIKEYType;
  TGstMIKEYType =  Longint;
  Const
    GST_MIKEY_TYPE_INVALID = -(1);
    GST_MIKEY_TYPE_PSK_INIT = 0;
    GST_MIKEY_TYPE_PSK_VERIFY = 1;
    GST_MIKEY_TYPE_PK_INIT = 2;
    GST_MIKEY_TYPE_PK_VERIFY = 3;
    GST_MIKEY_TYPE_DH_INIT = 4;
    GST_MIKEY_TYPE_DH_RESP = 5;
    GST_MIKEY_TYPE_ERROR = 6;
;
{*
 * GstMIKEYPayloadType:
 * @GST_MIKEY_PT_LAST: Last payload
 * @GST_MIKEY_PT_KEMAC: Key data transport payload
 * @GST_MIKEY_PT_PKE: Envelope data payload
 * @GST_MIKEY_PT_DH: DH data payload
 * @GST_MIKEY_PT_SIGN: Signature payload
 * @GST_MIKEY_PT_T: Timestamp payload
 * @GST_MIKEY_PT_ID: ID payload
 * @GST_MIKEY_PT_CERT: Certificate Payload
 * @GST_MIKEY_PT_CHASH: Cert hash payload
 * @GST_MIKEY_PT_V: Verification message payload
 * @GST_MIKEY_PT_SP: Security Policy payload
 * @GST_MIKEY_PT_RAND: RAND payload
 * @GST_MIKEY_PT_ERR: Error payload
 * @GST_MIKEY_PT_KEY_DATA: Key data sub-payload
 * @GST_MIKEY_PT_GEN_EXT: General Extension Payload

 * Different MIKEY Payload types.
  }
type
  PGstMIKEYPayloadType = ^TGstMIKEYPayloadType;
  TGstMIKEYPayloadType =  Longint;
  Const
    GST_MIKEY_PT_LAST = 0;
    GST_MIKEY_PT_KEMAC = 1;
    GST_MIKEY_PT_PKE = 2;
    GST_MIKEY_PT_DH = 3;
    GST_MIKEY_PT_SIGN = 4;
    GST_MIKEY_PT_T = 5;
    GST_MIKEY_PT_ID = 6;
    GST_MIKEY_PT_CERT = 7;
    GST_MIKEY_PT_CHASH = 8;
    GST_MIKEY_PT_V = 9;
    GST_MIKEY_PT_SP = 10;
    GST_MIKEY_PT_RAND = 11;
    GST_MIKEY_PT_ERR = 12;
    GST_MIKEY_PT_KEY_DATA = 20;
    GST_MIKEY_PT_GEN_EXT = 21;
;
{*
 * GstMIKEYPRFFunc:
 * @GST_MIKEY_PRF_MIKEY_1: MIKEY-1 PRF function
 *
 * The PRF function that has been/will be used for key derivation
  }
type
  PGstMIKEYPRFFunc = ^TGstMIKEYPRFFunc;
  TGstMIKEYPRFFunc =  Longint;
  Const
    GST_MIKEY_PRF_MIKEY_1 = 0;
;
{*
 * GstMIKEYMapType:
 * @GST_MIKEY_MAP_TYPE_SRTP: SRTP
 *
 * Specifies the method of uniquely mapping Crypto Sessions to the security
 * protocol sessions.
  }
type
  PGstMIKEYMapType = ^TGstMIKEYMapType;
  TGstMIKEYMapType =  Longint;
  Const
    GST_MIKEY_MAP_TYPE_SRTP = 0;
;
{*
 * GstMIKEYMapSRTP:
 * @policy: The security policy applied for the stream with @ssrc
 * @ssrc: the SSRC that must be used for the stream
 * @roc: current rollover counter
 *
 * The Security policy Map item for SRTP
  }
type
  PGstMIKEYMapSRTP = ^TGstMIKEYMapSRTP;
  TGstMIKEYMapSRTP = record
      policy : Tguint8;
      ssrc : Tguint32;
      roc : Tguint32;
    end;

function gst_mikey_payload_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function GST_TYPE_MIKEY_PAYLOAD : longint; { return type might be wrong }

{*
 * GstMIKEYPayload:
 * @type: the payload type
 * @len: length of the payload
 *
 * Hold the common fields for all payloads
  }
{ < private >  }
{ < public >  }
type
  PGstMIKEYPayload = ^TGstMIKEYPayload;
  TGstMIKEYPayload = record
      mini_object : TGstMiniObject;
      _type : TGstMIKEYPayloadType;
      len : Tguint;
    end;


function gst_mikey_payload_new(_type:TGstMIKEYPayloadType):PGstMIKEYPayload;cdecl;external;
{*
 * gst_mikey_payload_ref:
 * @payload: The payload to refcount
 *
 * Increase the refcount of this payload.
 *
 * Returns: (transfer full): @payload (for convenience when doing assignments)
 *
 * Since: 1.4
  }
{ xxxxxxxxxxxxxxxxx }
{static inline GstMIKEYPayload * }
{gst_mikey_payload_ref (GstMIKEYPayload * payload) }
{ }
{  return (GstMIKEYPayload *) gst_mini_object_ref (GST_MINI_OBJECT_CAST (payload)); }
{ }
{*
 * gst_mikey_payload_unref:
 * @payload: (transfer full): the payload to refcount
 *
 * Decrease the refcount of an payload, freeing it if the refcount reaches 0.
 *
 * Since: 1.4
  }
{static inline void }
{gst_mikey_payload_unref (GstMIKEYPayload * payload) }
{ }
{  gst_mini_object_unref (GST_MINI_OBJECT_CAST (payload)); }
{ }
{*
 * gst_mikey_payload_copy:
 * @payload: a #GstMIKEYPayload.
 *
 * Create a copy of the given payload.
 *
 * Returns: (transfer full): a new copy of @payload.
 *
 * Since: 1.4
  }
{static inline GstMIKEYPayload * }
{gst_mikey_payload_copy (const GstMIKEYPayload * payload) }
{ }
{  return (GstMIKEYPayload *) gst_mini_object_copy (GST_MINI_OBJECT_CONST_CAST (payload)); }
{ }
{*
 * GstMIKEYEncAlg:
 * @GST_MIKEY_ENC_NULL: no encryption
 * @GST_MIKEY_ENC_AES_CM_128: AES-CM using a 128-bit key
 * @GST_MIKEY_ENC_AES_KW_128: AES Key Wrap using a 128-bit key
 * @GST_MIKEY_ENC_AES_GCM_128: AES-GCM using a 128-bit key (Since: 1.16)
 *
 * The encryption algorithm used to encrypt the Encr data field
  }
type
  PGstMIKEYEncAlg = ^TGstMIKEYEncAlg;
  TGstMIKEYEncAlg =  Longint;
  Const
    GST_MIKEY_ENC_NULL = 0;
    GST_MIKEY_ENC_AES_CM_128 = 1;
    GST_MIKEY_ENC_AES_KW_128 = 2;
    GST_MIKEY_ENC_AES_GCM_128 = 6;
;
{*
 * GstMIKEYMacAlg:
 * @GST_MIKEY_MAC_NULL: no authentication
 * @GST_MIKEY_MAC_HMAC_SHA_1_160: HMAC-SHA-1-160
 *
 * Specifies the authentication algorithm used
  }
type
  PGstMIKEYMacAlg = ^TGstMIKEYMacAlg;
  TGstMIKEYMacAlg =  Longint;
  Const
    GST_MIKEY_MAC_NULL = 0;
    GST_MIKEY_MAC_HMAC_SHA_1_160 = 1;
;
{*
 * GstMIKEYPayloadKEMAC:
 * @pt: the common #GstMIKEYPayload
 * @enc_alg: the #GstMIKEYEncAlg
 * @mac_alg: the #GstMIKEYMacAlg
 * @subpayloads: the subpayloads
 *
 * A structure holding the KEMAC payload
  }
type
  PGstMIKEYPayloadKEMAC = ^TGstMIKEYPayloadKEMAC;
  TGstMIKEYPayloadKEMAC = record
      pt : TGstMIKEYPayload;
      enc_alg : TGstMIKEYEncAlg;
      mac_alg : TGstMIKEYMacAlg;
      subpayloads : PGArray;
    end;

function gst_mikey_payload_kemac_set(payload:PGstMIKEYPayload; enc_alg:TGstMIKEYEncAlg; mac_alg:TGstMIKEYMacAlg):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mikey_payload_kemac_get_n_sub(payload:PGstMIKEYPayload):Tguint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_mikey_payload_kemac_get_sub(payload:PGstMIKEYPayload; idx:Tguint):PGstMIKEYPayload;cdecl;external;
function gst_mikey_payload_kemac_remove_sub(payload:PGstMIKEYPayload; idx:Tguint):Tgboolean;cdecl;external;
function gst_mikey_payload_kemac_add_sub(payload:PGstMIKEYPayload; newpay:PGstMIKEYPayload):Tgboolean;cdecl;external;
{*
 * GstMIKEYCacheType:
 * @GST_MIKEY_CACHE_NONE: The envelope key MUST NOT be cached
 * @GST_MIKEY_CACHE_ALWAYS: The envelope key MUST be cached
 * @GST_MIKEY_CACHE_FOR_CSB: The envelope key MUST be cached, but only
 *                           to be used for the specific CSB.
 *
 * The different cache types
  }
type
  PGstMIKEYCacheType = ^TGstMIKEYCacheType;
  TGstMIKEYCacheType =  Longint;
  Const
    GST_MIKEY_CACHE_NONE = 0;
    GST_MIKEY_CACHE_ALWAYS = 1;
    GST_MIKEY_CACHE_FOR_CSB = 2;
;
{*
 * GstMIKEYPayloadPKE:
 * @pt: the common #GstMIKEYPayload
 * @C: envelope key cache indicator
 * @data_len: length of @data
 * @data: the encrypted envelope key
 *
 * The Envelope data payload contains the encrypted envelope key that is
 * used in the public-key transport to protect the data in the Key data
 * transport payload.  The encryption algorithm used is implicit from
 * the certificate/public key used.
  }
type
  PGstMIKEYPayloadPKE = ^TGstMIKEYPayloadPKE;
  TGstMIKEYPayloadPKE = record
      pt : TGstMIKEYPayload;
      C : TGstMIKEYCacheType;
      data_len : Tguint16;
      data : Pguint8;
    end;
(* Const before type ignored *)

function gst_mikey_payload_pke_set(payload:PGstMIKEYPayload; C:TGstMIKEYCacheType; data_len:Tguint16; data:Pguint8):Tgboolean;cdecl;external;
{*
 * GstMIKEYTSType:
 * @GST_MIKEY_TS_TYPE_NTP_UTC: an NTP time in UTC timezone
 * @GST_MIKEY_TS_TYPE_NTP: an NTP time
 * @GST_MIKEY_TS_TYPE_COUNTER: a counter
 *
 * Specifies the timestamp type.
  }
type
  PGstMIKEYTSType = ^TGstMIKEYTSType;
  TGstMIKEYTSType =  Longint;
  Const
    GST_MIKEY_TS_TYPE_NTP_UTC = 0;
    GST_MIKEY_TS_TYPE_NTP = 1;
    GST_MIKEY_TS_TYPE_COUNTER = 2;
;
{*
 * GstMIKEYPayloadT:
 * @pt: the payload header
 * @type: a #GstMIKEYTSType
 * @ts_value: the timestamp value
 *
 * The timestamp payload carries the timestamp information
  }
type
  PGstMIKEYPayloadT = ^TGstMIKEYPayloadT;
  TGstMIKEYPayloadT = record
      pt : TGstMIKEYPayload;
      _type : TGstMIKEYTSType;
      ts_value : Pguint8;
    end;
(* Const before type ignored *)
